WTForms Changelog
=================

Version 0.5
-----------
Not yet released.

- ext.sqlalchemy.fields now has an additional QuerySelectMultipleField.

Version 0.4
-----------
Released October 10th, 2009.

- Fields have much greater control over input processing. Filters have been
  added to implement a simple way to transform input data.

- Added fields that encapsulate advanced data structures such as dynamic lists
  or child forms for more powerful field composing.

- Fields now use widgets for rendering.

- All built-in validators have been converted to classes to clean up the code.

- `Form.auto_populate` and `Field.populate` were renamed to `populate_obj` to
  clarify that they populate another object, not the Form or Field. This is an
  API breaking change.

- Dropped support for Python 2.3.

Version 0.3.1
-------------
Released January 24th, 2009.

- Several fixes were made to the code and tests to make WTForms compatible
  with Python 2.3/2.4.

- Form's properties can now be accessed via dictionary-style access such as
  `form['author']`. This also has the intended effect of making variable
  lookups in Django templates more reliable.

- Form and Field construction changes: Form now uses a metaclass to handle
  creating its `_unbound_fields` property, and Field construction now gives an
  instance of the new `UnboundField` class instead of using a partial function
  application. These are both internal changes and do not change the API.


Version 0.3
-----------
Released January 18th, 2009.

- Validation overhaul: Fields are now responsible for their own validation,
  instead of mostly relying on Form. There are also new pre_validate and
  post_validate hooks on subfields, adding a great deal of flexibility when
  dealing with field-level validation. Note that this is an API breaking change
  if you have any subfields that override `Field.validate`. These will need to
  be updated to use the new hooks.
